Builds on gradle 7.2 Refresh some dependencies
(may not work)